# bnbong.xyz

./: .gitignore  .pre-commit-config.yaml  .yamllint  DEPLOYMENT.md  README.md  UV_GUIDE.md  docker-compose.yml  env.example
.github/workflows/: ci.yml  release.yml
auth-server/: Dockerfile  env.example  pyproject.toml  requirements.txt
auth-server/scripts/: dev.sh
auth-server/src/: __init__.py  config.py  main.py
auth-server/src/core/: __init__.py  auth.py  database.py  users.py
auth-server/src/models/: __init__.py  user.py
auth-server/tests/: test_version.py
client/: Dockerfile  nginx.conf  package.json
gateway/: Dockerfile  README.md  pyproject.toml  requirements.txt
gateway/scripts/: dev.sh
gateway/src/: __init__.py  config.py  main.py
gateway/src/core/: __init__.py  middleware.py  router.py  services.py
infra/: deploy.sh  main.tf  terraform.tfvars.example  user_data.sh  variables.tf
nginx/: nginx.conf
playground/: Dockerfile  nginx.conf  package.json
